--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+$my-primary: mat.define-palette(mat.$red-palette, 600);
+$my-accent: mat.define-palette(mat.$pink-palette, A200, A400, 700);
+$my-warn: mat.define-palette(mat.$red-palette, 600);
+
+$my-theme: mat.define-light-theme((
+ color: (
+   primary: $my-primary,
+   accent: $my-accent,
+   warn: $my-warn,
+ ),
+ typography: mat.define-typography-config(),
+ density: 0,
+));
+
+@include mat.all-component-themes($my-theme);
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
