--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,62 +1,84 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 $my-primary: mat.define-palette(mat.$red-palette, 600);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A400, 700);
 $my-warn: mat.define-palette(mat.$red-palette, 600);
 
-$my-theme: mat.define-light-theme((
- color: (
-   primary: $my-primary,
-   accent: $my-accent,
-   warn: $my-warn,
- ),
- typography: mat.define-typography-config(),
- density: 0,
-));
+$my-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $my-primary,
+      accent: $my-accent,
+      warn: $my-warn,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+  )
+);
 
 @include mat.all-component-themes($my-theme);
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-  //responsibe table
-  @media(max-width: 800px) {
-    .responsive_table {
-        overflow-x: auto !important;
-    }
-  
-    .mat-table {
-        min-width:800px;
-    }
-  }
-  
-  .mat-row {
-    height: auto;
-  }
-  
-  .mat-header-cell,.mat-cell {
-    text-align: center !important;
-    padding: 0px 8px 0px 15px !important;
-  }
-
-  .black-snackbar {
-    background: black !important;
-    color: white !important;
-  }
-
-  .green-snackbar {
-    background: #32CD32 !important;
-    color: white !important;
-  }
-
-  .mat-snack-bar-container {
-    margin-right: auto !important;
-    margin-left: auto !important;
-    width: 40vw !important;
-    min-width: 90% !important;
-    max-width: 100vw !important;
-    margin-top: 70px !important;
-    padding: 20px !important;
+html,
+body {
+  height: 100%;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+//responsibe table
+@media (max-width: 800px) {
+  .responsive_table {
+    overflow-x: auto !important;
+  }
+
+  .mat-table {
+    min-width: 800px;
+  }
+}
+
+.mat-row {
+  height: auto;
+}
+
+.mat-header-cell,
+.mat-cell {
+  text-align: center !important;
+  padding: 0px 8px 0px 15px !important;
+}
+
+// STYLE SNACK BAR 
+
+.mat-mdc-snack-bar-container {
+  &.green-snackbar {
+    --mdc-snackbar-container-color: #32cd32 !important;
+    --mat-mdc-snack-bar-button-color: #fff !important;
+    --mdc-snackbar-supporting-text-color: #fff !important;
+  }
+}
+.mat-mdc-snack-bar-container {
+  &.black-snackbar {
+    --mdc-snackbar-container-color: black !important;
+    --mat-mdc-snack-bar-button-color: #fff !important;
+    --mdc-snackbar-supporting-text-color: #fff !important;
+  }
+}
+
+.mat-snack-bar-container {
+  margin-right: auto !important;
+  margin-left: auto !important;
+  width: 40vw !important;
+  min-width: 90% !important;
+  max-width: 100vw !important;
+  margin-top: 70px !important;
+  padding: 20px !important;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
