--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
       <mat-icon>storefront</mat-icon> Cafe Management System
     </a>
     <ul>
-      <li><a (click)="signupAction()">Signup</a></li>
+      <li><a (click)="signupAction()">Cadastro</a></li>
     </ul>
   </nav>
 </div>
