--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,53 @@
-<p>signup works!</p>
+<div class="mat-dialog__container">
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <span class="title-center">Registre-se</span>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    
+    <mat-dialog-content class="mat-dialog__container">
+        <form [formGroup]="signupForm">
+        <div>
+    
+            <mat-form-field>
+                <mat-label>Nome</mat-label>
+                <input matInput formControlName="name" required>
+                <mat-error *ngIf="signupForm.controls.name.touched && signupForm.controls.name.invalid">
+                    <span *ngIf="signupForm.controls.name.errors.required"> Este campo é obrigátorio</span>
+                    <span *ngIf="signupForm.controls.name.errors.pattern"> Este campo é invalido</span>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>E-mail</mat-label>
+                <input matInput formControlName="email" required>
+                <mat-error *ngIf="signupForm.controls.email.touched && signupForm.controls.email.invalid">
+                    <span *ngIf="signupForm.controls.email.errors.required"> Este campo é obrigátorio</span>
+                    <span *ngIf="signupForm.controls.email.errors.pattern"> Este campo é invalido</span>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Contato</mat-label>
+                <input matInput formControlName="contactNumber" required>
+                <mat-error *ngIf="signupForm.controls.contactNumber.touched && signupForm.controls.contactNumber.invalid">
+                    <span *ngIf="signupForm.controls.contactNumber.errors.required"> Este campo é obrigátorio</span>
+                    <span *ngIf="signupForm.controls.contactNumber.errors.pattern"> Este campo é invalido</span>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Senha</mat-label>
+                <input type="password" matInput formControlName="password" required>
+                <mat-error *ngIf="signupForm.controls.password.touched && signupForm.controls.password.invalid">
+                    <span *ngIf="signupForm.controls.password.errors.required"> Este campo é obrigátorio</span>
+                    <span *ngIf="signupForm.controls.password.errors.pattern"> Este campo é invalido</span>
+                </mat-error>
+            </mat-form-field>
+    
+        </div>
+        </form>
+    </mat-dialog-content>
+    
+    <mat-dialog-content style="text-align: center;">
+     <button class="btn-actions__submit" mat-raised-button color="primary" type="submit" (click)="handleSubmit()" [disabled]="!(signupForm.valid && signupForm.dirty)">Registre-se</button>
+     <button class="btn-actions__submit" mat-raised-button color="primary" mat-dialog-close>Fechar </button>
+    </mat-dialog-content>
+</div>
