--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,7 @@
     </a>
     <ul>
       <li><a (click)="signupAction()">Cadastro</a></li>
+      <li><a (click)="forgotPassword()">Recuperar senha</a></li>
     </ul>
   </nav>
 </div>
