--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -46,8 +46,8 @@
         </form>
     </mat-dialog-content>
     
-    <mat-dialog-content style="text-align: center;">
-     <button class="btn-actions__submit" mat-raised-button color="primary" type="submit" (click)="handleSubmit()" [disabled]="!(signupForm.valid && signupForm.dirty)">Registre-se</button>
-     <button class="btn-actions__submit" mat-raised-button color="primary" mat-dialog-close>Fechar </button>
-    </mat-dialog-content>
+    <mat-dialog-actions align="center">
+     <button  mat-raised-button color="primary" type="submit" (click)="handleSubmit()" [disabled]="!(signupForm.valid && signupForm.dirty)">Registre-se</button>
+     <button  mat-raised-button color="primary" mat-dialog-close>Fechar</button>
+    </mat-dialog-actions>
 </div>
