feat: login component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,8 @@
     </a>
     <ul>
       <li><a (click)="signupAction()">Cadastro</a></li>
-      <li><a (click)="forgotPassword()">Recuperar senha</a></li>
+      <li><a (click)="forgotPasswordAction()">Recuperar senha</a></li>
+      <li><a (click)="loginAction()">Login</a></li>
     </ul>
   </nav>
 </div>
