--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -17,7 +17,7 @@
 
 
 <mat-drawer-container aurosize>
-  <mat-drawer #drawer opened="true" mode="side">
+  <mat-drawer #drawer opened="false" mode="side">
     <mat-nav-list>
       <mat-list-item>
         
