--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a (click)="signupAction()">Cadastro</a></li>
       <li><a (click)="forgotPasswordAction()">Recuperar senha</a></li>
-      <li><a (click)="loginAction()">Login</a></li>
+      <li><a (click)="loginAction()" mat-raised-button color="accent">Login</a></li>
     </ul>
   </nav>
 </div>
