--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @use "@angular/material" as mat;
 
 $my-primary: mat.define-palette(mat.$red-palette, 600);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A400, 700);
+$my-accent: mat.define-palette(mat.$yellow-palette, A200);
 $my-warn: mat.define-palette(mat.$red-palette, 600);
 
 $my-theme: mat.define-light-theme(
