--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -2,5 +2,12 @@
     <mat-icon>account_circle</mat-icon>
 </button>
 <mat-menu #profile="matMenu" class="mymegamenu">
+<button mat-menu-item (click)="changePassword()">
+<mat-icon>password</mat-icon>Mudar Senha
+</button>
 
+<button mat-menu-item (click)="logout()">
+<mat-icon>exit_to_app</mat-icon> SAIR
+
+</button>
 </mat-menu>
