--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,20 +1,13 @@
 .position-relative {
   position: relative;
 }
+
 .add-contact {
   position: absolute;
   right: 17px;
   top: 57px;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 20px;
-}
-
-html {
-  box-sizing: border-box;
-}
 .column {
   float: left;
   width: 33.3%;
@@ -23,8 +16,10 @@ html {
 }
 
 .card {
+  padding: 10px;
+  margin: 10px;
+  height: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
 }
 
 .about-section {
