--- a/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/src/app/layouts/full/sidebar/sidebar.component.html
@@ -1,3 +1,12 @@
+<div class="sidenav-img">
+  <img src="assets/kitanda.png" width="100" height="100" >
+  <div class="header-text">
+    <h2>Kitanda CafeBistrô</h2>
+    <p>Management System</p>
+  </div>
+</div>
+
+
 <mat-nav-list>
   <ng-container *ngFor="let item of menuItems()">
     <a mat-list-item *ngIf="item.role === '' || item.role === tokenPayload.role" [routerLink]="item.route">
