--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,14 +17,15 @@ $my-theme: mat.define-light-theme(
 );
 
 @include mat.all-component-themes($my-theme);
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 html,
 body {
   height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 //responsibe table
@@ -38,17 +39,7 @@ body {
   }
 }
 
-.mat-row {
-  height: auto;
-}
-
-.mat-header-cell,
-.mat-cell {
-  text-align: center !important;
-  padding: 0px 8px 0px 15px !important;
-}
-
-// STYLE SNACK BAR 
+// STYLE SNACK BAR
 
 .mat-mdc-snack-bar-container {
   &.green-snackbar {
@@ -69,9 +60,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
-
 }
-
 .mat-snack-bar-container {
   margin-right: auto !important;
   margin-left: auto !important;
@@ -80,12 +69,4 @@ body {
   max-width: 100vw !important;
   margin-top: 70px !important;
   padding: 20px !important;
-}
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
