--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,8 +7,8 @@
           <h2 class="title">Total Category:</h2>
           <h1 class="title">{{ data?.category }}</h1>
           <p>
-            <button class="button" [routerLink]="['/cafe/category']">
-              View Category
+            <button class="button" routerLink="/cafe/category">
+              VER CATEGORIAS
             </button>
           </p>
         </div>
@@ -20,8 +20,8 @@
           <h2 class="title">Total Product:</h2>
           <h1 class="title">{{ data?.product }}</h1>
           <p>
-            <button class="button" [routerLink]="['/cafe/product']">
-              View Category
+            <button class="button" routerLink="/cafe/product">
+              VER PRODUTOS
             </button>
           </p>
         </div>
@@ -33,8 +33,8 @@
           <h2 class="title">Total Bill:</h2>
           <h1 class="title">{{ data?.bill }}</h1>
           <p>
-            <button class="button" [routerLink]="['/cafe/bill']">
-              View Category
+            <button class="button" routerLink="/cafe/bill">
+              VER CONTAS
             </button>
           </p>
         </div>
