--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -10,7 +10,7 @@
       <div>
         <mat-form-field>
           <mat-label>E-mail</mat-label>
-          <input matInput formControlName="email" required/>
+          <input matInput formControlName="email" required />
           <mat-error
             *ngIf="
               forgotPasswordForm.controls.email.touched &&
@@ -30,7 +30,6 @@
   </mat-dialog-content>
   <mat-dialog-actions align="center">
     <button
-    
       mat-raised-button
       color="primary"
       type="submit"
@@ -39,13 +38,6 @@
     >
       Recuperar
     </button>
-    <button
-      
-      mat-raised-button
-      color="primary"
-      mat-dialog-close
-    >
-      Fechar
-    </button>
+    <button mat-raised-button color="primary" mat-dialog-close>Fechar</button>
   </mat-dialog-actions>
 </div>
