--- a/src/app/material-component/manage-category/manage-category.component.html
+++ b/src/app/material-component/manage-category/manage-category.component.html
@@ -1,1 +1,43 @@
-<p>manage-category works!</p>
+<mat-card class="add-category__content">
+  <b><span>Gerenciar Categoria</span></b>
+  <button
+    mat-flat-button
+    color="primary"
+    class="float-right"
+    (click)="handleAddAction()"
+  >
+    ADICIONAR CATEGORIA
+  </button>
+</mat-card>
+<hr />
+
+<mat-card>
+  <mat-form-field appearance="fill">
+    <mat-label>Filtro</mat-label>
+    <input matInput (keyup)="appliFilter($event)" #input />
+  </mat-form-field>
+</mat-card>
+<hr />
+<mat-card>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>NOME</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef>EDITAR</th>
+      <td mat-cell *matCellDef="let element" class="action-link">
+        <button
+          mat-icon-button
+          color="primary"
+          matTooltip="edit"
+          (click)="handleEditAction(element)"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</mat-card>
