--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,3 +70,25 @@ body {
   margin-top: 70px !important;
   padding: 20px !important;
 }
+
+
+//responsibe table
+@media (max-width: 800px) {
+  .responsive_table {
+    overflow-x: auto !important;
+  }
+
+  .mat-table {
+    min-width: 800px;
+  }
+}
+
+.mat-row {
+  height: auto;
+}
+
+.mat-header-cell,
+.mat-cell {
+  text-align: center !important;
+  padding: 0px 8px 0px 15px !important;
+}
