feat: manage product finish

--- a/src/app/material-component/manage-category/manage-category.component.html
+++ b/src/app/material-component/manage-category/manage-category.component.html
@@ -14,7 +14,7 @@
 <mat-card>
   <mat-form-field appearance="fill">
     <mat-label>Filtro</mat-label>
-    <input matInput (keyup)="appliFilter($event)" #input />
+    <input matInput (keyup)="applyFilter($event)" #input />
   </mat-form-field>
 </mat-card>
 <hr />
