--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="column">
       <div class="card">
         <div class="container">
-          <h2 class="title">Total Category:</h2>
+          <h2 class="title">Todas as Categorias</h2>
           <h1 class="title">{{ data?.category }}</h1>
           <p>
             <button class="button" routerLink="/cafe/category">
@@ -17,7 +17,7 @@
     <div class="column">
       <div class="card">
         <div class="container">
-          <h2 class="title">Total Product:</h2>
+          <h2 class="title">Todos os produtos</h2>
           <h1 class="title">{{ data?.product }}</h1>
           <p>
             <button class="button" routerLink="/cafe/product">
@@ -30,7 +30,7 @@
     <div class="column">
       <div class="card">
         <div class="container">
-          <h2 class="title">Total Bill:</h2>
+          <h2 class="title">Gerenciar Contas</h2>
           <h1 class="title">{{ data?.bill }}</h1>
           <p>
             <button class="button" routerLink="/cafe/bill">
