--- a/src/app/material-component/dialog/product/product.component.html
+++ b/src/app/material-component/dialog/product/product.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="mat-elevavation-z4">
   <mat-toolbar-row>
-    <span class="title-center">{{ dialogData.action }} Produto</span>
+    <span class="title-center"> Produto</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
