--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,9 @@
+h2 {
+  padding: 5px;
+}
+h1 {
+  margin-bottom: 25px;
+}
 .position-relative {
   position: relative;
 }
@@ -10,7 +16,7 @@
 
 .column {
   float: left;
-  width: 33.3%;
+  width: 40.3%;
   margin-bottom: 16px;
   padding: 8 8px;
 }
