--- a/src/app/material-component/dialog/confirmation-delete/confirmation-delete.component.html
+++ b/src/app/material-component/dialog/confirmation-delete/confirmation-delete.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-    <h5> Você quer fazer {{details.message}} ?</h5>
+    <h5> Você deseja deletar {{details.message}} ? </h5>
 </mat-dialog-content>
 
 <mat-dialog-actions align="center">
