--- a/src/app/material-component/manage-category/manage-category.component.scss
+++ b/src/app/material-component/manage-category/manage-category.component.scss
@@ -13,8 +13,13 @@
 }
 
 mat-card {
-  padding: 20px;
+  padding: 10px;
+  margin: 10px;
 }
 table {
   width: 100%;
+}
+td , th {
+  text-transform: uppercase;
+  text-align: center;
 }
