--- a/src/app/material-component/manage-product/manage-product.component.html
+++ b/src/app/material-component/manage-product/manage-product.component.html
@@ -1,4 +1,4 @@
-<mat-card class="add-category__content">
+<mat-card class="add-product__content">
   <b><span>Gerenciar Produtos</span></b>
   <button
     mat-flat-button
@@ -13,13 +13,14 @@
 
 <mat-card>
   <mat-form-field appearance="fill">
-    <mat-label>Filtro</mat-label>
+    <mat-label>Procurar produto</mat-label>
     <input matInput (keyup)="applyFilter($event)" #input />
   </mat-form-field>
 </mat-card>
+<hr>
 
 <mat-card>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
     <ng-container matColumnDef="name" class="action-link">
       <th mat-header-cell *matHeaderCellDef>NOME</th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
@@ -37,7 +38,7 @@
 
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef>PREÇO</th>
-      <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.price}}</td>
     </ng-container>
 
     <ng-container matColumnDef="edit">
