--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@ $my-theme: mat.define-light-theme(
 html,
 body {
   height: 100%;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 //responsibe table
