--- a/src/app/material-component/manage-product/manage-product.component.html
+++ b/src/app/material-component/manage-product/manage-product.component.html
@@ -38,7 +38,7 @@
 
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef>PREÇO</th>
-      <td mat-cell *matCellDef="let element">{{ element.price}}</td>
+      <td mat-cell *matCellDef="let element">{{ element.price | currency: 'BRL'}}</td>
     </ng-container>
 
     <ng-container matColumnDef="edit">
