--- a/src/app/material-component/manage-order/manage-order.component.html
+++ b/src/app/material-component/manage-order/manage-order.component.html
@@ -13,95 +13,91 @@
 <hr />
 
 <mat-card>
+  <b><span class="box-info__content">Dados do cliente</span></b>
   <form [formGroup]="manageOrderForm">
-   
-     
-        <mat-form-field appearance="fill">
-          <mat-label>Nome</mat-label>
-          <input matInput formControlName="name" required />
-          <mat-error
-            *ngIf="
-              manageOrderForm.controls.name.touched &&
-              manageOrderForm.controls.name.invalid
-            "
-          >
-            <span *ngIf="manageOrderForm.controls.name.errors.required"
-              >Este campo é obrigatório.</span
-            >
-            <span *ngIf="manageOrderForm.controls.name.errors.pattern"
-              >Este campo é inválido.</span
-            >
-          </mat-error>
-        </mat-form-field>
+    <mat-form-field appearance="fill" class="mat-25">
+      <mat-label>Nome</mat-label>
+      <input matInput formControlName="name" required />
+      <mat-error
+        *ngIf="
+          manageOrderForm.controls.name.touched &&
+          manageOrderForm.controls.name.invalid
+        "
+      >
+        <span *ngIf="manageOrderForm.controls.name.errors.required"
+          >Este campo é obrigatório.</span
+        >
+        <span *ngIf="manageOrderForm.controls.name.errors.pattern"
+          >Este campo é inválido.</span
+        >
+      </mat-error>
+    </mat-form-field>
 
-        <mat-form-field appearance="fill">
-          <mat-label>E-mail</mat-label>
-          <input matInput formControlName="email" required />
-          <mat-error
-            *ngIf="
-              manageOrderForm.controls.email.touched &&
-              manageOrderForm.controls.email.invalid
-            "
-          >
-            <span *ngIf="manageOrderForm.controls.email.errors.required"
-              >Este campo é obrigatório.</span
-            >
-            <span *ngIf="manageOrderForm.controls.email.errors.pattern"
-              >Este campo é inválido.</span
-            >
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Contato</mat-label>
-          <input matInput formControlName="contactNumber" required />
-          <mat-error
-            *ngIf="
-              manageOrderForm.controls.contactNumber.touched &&
-              manageOrderForm.controls.contactNumber.invalid
-            "
-          >
-            <span *ngIf="manageOrderForm.controls.contactNumber.errors.required"
-              >Este campo é obrigatório.</span
-            >
-            <span *ngIf="manageOrderForm.controls.contactNumber.errors.pattern"
-              >Este campo é inválido.</span
-            >
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Metodo de Pagamento</mat-label>
-          <mat-select matInput formControlName="paymentMethod">
-            <mat-option value="Dinheiro">Dinheiro</mat-option>
-            <mat-option value="PIX">PIX</mat-option>
-            <mat-option value="Cartão Crédito">Cartão Crédito</mat-option>
-            <mat-option value="Cartão Débito">Cartão Débito</mat-option>
-          </mat-select>
-          <mat-error
-            *ngIf="
-              manageOrderForm.controls.paymentMethod.touched &&
-              manageOrderForm.controls.paymentMethod.invalid
-            "
-          >
-            <span
-              style="font-size: 0.6rem"
-              *ngIf="manageOrderForm.controls.paymentMethod.errors.required"
-              >Selecione um método de pagamento.</span
-            >
-          </mat-error>
-        </mat-form-field>
- 
-
+    <mat-form-field appearance="fill" class="mat-25">
+      <mat-label>E-mail</mat-label>
+      <input matInput formControlName="email" required />
+      <mat-error
+        *ngIf="
+          manageOrderForm.controls.email.touched &&
+          manageOrderForm.controls.email.invalid
+        "
+      >
+        <span *ngIf="manageOrderForm.controls.email.errors.required"
+          >Este campo é obrigatório.</span
+        >
+        <span *ngIf="manageOrderForm.controls.email.errors.pattern"
+          >Este campo é inválido.</span
+        >
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="mat-25">
+      <mat-label>Contato</mat-label>
+      <input matInput formControlName="contactNumber" required />
+      <mat-error
+        *ngIf="
+          manageOrderForm.controls.contactNumber.touched &&
+          manageOrderForm.controls.contactNumber.invalid
+        "
+      >
+        <span *ngIf="manageOrderForm.controls.contactNumber.errors.required"
+          >Este campo é obrigatório.</span
+        >
+        <span *ngIf="manageOrderForm.controls.contactNumber.errors.pattern"
+          >Este campo é inválido.</span
+        >
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="mat-25">
+      <mat-label>Metodo de Pagamento</mat-label>
+      <mat-select matInput formControlName="paymentMethod">
+        <mat-option value="Dinheiro">Dinheiro</mat-option>
+        <mat-option value="PIX">PIX</mat-option>
+        <mat-option value="Cartão Crédito">Cartão Crédito</mat-option>
+        <mat-option value="Cartão Débito">Cartão Débito</mat-option>
+      </mat-select>
+      <mat-error
+        *ngIf="
+          manageOrderForm.controls.paymentMethod.touched &&
+          manageOrderForm.controls.paymentMethod.invalid
+        "
+      >
+        <span
+          style="font-size: 0.6rem"
+          *ngIf="manageOrderForm.controls.paymentMethod.errors.required"
+          >Selecione um método de pagamento.</span
+        >
+      </mat-error>
+    </mat-form-field>
   </form>
 </mat-card>
 
 <hr />
 
-<b><span>Selecione o produto</span></b>
-
 <mat-card>
+  <b><span>Selecione o produto</span></b>
   <form [formGroup]="manageOrderForm">
     <div>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="mat-20">
         <mat-label>Categoria</mat-label>
         <mat-select
           formControlName="category"
@@ -112,7 +108,7 @@
           }}</mat-option></mat-select
         >
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="mat-20">
         <mat-label>Produto</mat-label>
         <mat-select
           formControlName="product"
@@ -123,7 +119,7 @@
           }}</mat-option></mat-select
         >
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="mat-20">
         <mat-label>Preço</mat-label>
         <input matInput formControlName="price" required readonly />
         <mat-error
@@ -140,7 +136,7 @@
           >
         </mat-error>
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="mat-20">
         <mat-label>Quantidade</mat-label>
         <input
           matInput
@@ -163,27 +159,23 @@
           >
         </mat-error>
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="mat-20">
         <mat-label>TOTAL</mat-label>
         <input matInput formControlName="total" required readonly />
       </mat-form-field>
     </div>
   </form>
-</mat-card>
-<hr />
-<div>
   <button
+    class="float-right"
     mat-flat-button
     color="primary"
     [disabled]="validadeProductAdd()"
     (click)="add()"
   >
-    ADICIONAR
+    ADICIONAR PRODUTO
   </button>
-  <button mat-flat-button color="primary" class="float-right">
-    Total Amount {{ totalAmount | currency : "BRL" }}
-  </button>
-</div>
+</mat-card>
+<hr />
 <div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
@@ -210,7 +202,6 @@
         {{ element.total | currency : "BRL" }}
       </td>
     </ng-container>
-
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef>Apagar</th>
       <td mat-cell *matCellDef="let element; let i = index">
@@ -228,3 +219,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 </div>
+
+<button mat-flat-button color="primary" class="float-right"> {{ totalAmount | currency : "BRL" }}</button>
