--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -4,7 +4,7 @@
       <button mat-icon-button (click)="collapsed.set(!collapsed())">
         <mat-icon>menu</mat-icon>
       </button>
-      <span> Cafe Management System </span>
+      <span class="header-text__name"> Cafe Management System </span>
       <mat-icon style="margin-left: 10px">storefront</mat-icon>
     </div>
 
