feat: view bill component finish

--- a/src/app/material-component/dialog/view-bill-products/view-bill-products.component.scss
+++ b/src/app/material-component/dialog/view-bill-products/view-bill-products.component.scss
@@ -1,10 +1,11 @@
 .mat-toolbar {
-    margin: -24px;
     margin-bottom: 0;
     width: auto;
     margin-bottom: 10PX;
   }
-  
+  .count-content{
+    margin: 20px;
+  }
   .title-center {
       flex: 1 1 auto;
       text-align: center;
