feat: manage-user component fnish

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -226,7 +226,7 @@ a:hover::after {
 }
 .bg-image {
   /* The image used */
-  background-image: url("../../assets/img/food1.jpg");
+  background-image: url("../../assets/cup-cafe-management.jpg");
   
   /* Add the blur effect */
   filter: blur(3px);
