fix: responsive sidebar

--- a/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/src/app/layouts/full/sidebar/sidebar.component.html
@@ -29,7 +29,11 @@
       <span
         matListItemTitle
         *ngIf="!sideNavCollpsed()"
-        style="text-transform: uppercase; font-weight: bold;font-family: 'Roboto', sans-serif;"
+        style="
+          text-transform: uppercase;
+          font-weight: bold;
+          font-family: 'Roboto', sans-serif;
+        "
         >{{ item.state }}</span
       >
     </a>
