--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ $my-theme: mat.define-light-theme(
 );
 
 @include mat.all-component-themes($my-theme);
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -26,7 +26,7 @@ $my-theme: mat.define-light-theme(
 html,
 body {
   height: 100%;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 //responsibe table
@@ -71,7 +71,6 @@ body {
   margin-top: 70px !important;
   padding: 20px !important;
 }
-
 
 //responsibe table
 @media (max-width: 800px) {
