fix: best-seller component and enviroments

--- a/src/app/best-seller/best-seller.component.html
+++ b/src/app/best-seller/best-seller.component.html
@@ -20,11 +20,12 @@
           </div>
           <div class="timeline-body">
             <p class="text-muted">
-              Pizza is an Italian dish consisting of a usually round, flattened
-              base of leavened wheat-based dough topped with tomatoes, cheese,
-              and often various other ingredients, which is then baked at a high
-              temperature, traditionally in a wood-fired oven. A small pizza is
-              sometimes called a pizzetta.
+              Pizza é um prato italiano que consiste geralmente em uma massa
+              redonda e achatada. base de massa levedada à base de trigo coberta
+              com tomate, queijo, e muitas vezes vários outros ingredientes, que
+              são então cozidos em alta temperatura temperatura,
+              tradicionalmente em forno a lenha. Uma pizza pequena é às vezes
+              chamada de pizzetta.
             </p>
           </div>
         </div>
@@ -45,10 +46,10 @@
           </div>
           <div class="timeline-body">
             <p class="text-muted">
-              Biryani is a mixed rice dish. It is made with Indian spices, rice,
-              and meat usually that of chicken, fish, and sometimes, in
-              addition, eggs or vegetables such as potatoes in certain regional
-              varieties.
+              Biryani é um prato misto de arroz. É feito com especiarias
+              indianas, arroz, e carne geralmente de frango, peixe e, às vezes,
+              em Além disso, ovos ou vegetais, como batatas, em determinadas
+              regiões variedades.
             </p>
           </div>
         </div>
@@ -69,9 +70,9 @@
           </div>
           <div class="timeline-body">
             <p class="text-muted">
-              Pasta is a type of food typically made from an unleavened dough of
-              wheat flour mixed with water or eggs, and formed into sheets or
-              other shapes, then cooked by boiling or baking.
+              Pasta é um tipo de alimento tipicamente feito com massa sem fermento de
+              farinha de trigo misturada com água ou ovos, e formada em folhas ou
+              outros formatos e depois cozidos em fervura ou cozimento.
             </p>
           </div>
         </div>
@@ -92,10 +93,10 @@
           </div>
           <div class="timeline-body">
             <p class="text-muted">
-              Molten chocolate cake is a popular dessert that combines the
-              elements of a chocolate cake and a soufflé. Its name derives from
-              the dessert's liquid chocolate center, and it is also known as
-              chocolate moelleux, chocolate lava cake, or simply lava cake.
+              Bolo de chocolate derretido é uma sobremesa popular que combina o
+              elementos de um bolo de chocolate e um suflê. Seu nome deriva de
+              o centro de chocolate líquido da sobremesa, e também é conhecido como
+              moelleux de chocolate, bolo de lava de chocolate ou simplesmente bolo de lava.
             </p>
           </div>
         </div>
