rm: app best-seller files

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,4 @@
 <div class="bg-image"></div>
-<app-best-seller></app-best-seller>
-
 <div class="wrapper sticky">
   <nav class="navbar-fixed-top">
     <a href="#" class="logo">
@@ -9,7 +7,9 @@
     <ul>
       <li><a (click)="signupAction()">Cadastro</a></li>
       <li><a (click)="forgotPasswordAction()">Recuperar senha</a></li>
-      <li><a (click)="loginAction()" mat-raised-button color="accent">Login</a></li>
+      <li>
+        <a (click)="loginAction()" mat-raised-button color="accent">Login</a>
+      </li>
     </ul>
   </nav>
 </div>
