--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,257 +1,64 @@
-* {
-  box-sizing: border-box;
-}
-
-/* Style the body */
 body {
-  font-family: Arial;
-  margin: 0;
-}
-
-/* Header/logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-}
-
-/* Style the top navigation bar */
-.navbar {
-  display: flex;
-  background-color: #333;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  color: white;
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Column container */
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
-.main {
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 6px;
-  text-align: center;
-  color: white;
-  background: #e53935;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row,
-  .navbar {
-    flex-direction: column;
-  }
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* Container for flexboxes */
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Create four equal columns */
-.column {
-  flex: 25%;
-  padding: 20px;
-}
-
-/* On screens that are 992px wide or less, go from four columns to two columns */
-@media screen and (max-width: 992px) {
-  .column {
-    flex: 50%;
-  }
-}
-
-body {
-  background-color: #384047;
-}
-
-.wrapper {
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #e53935;
-}
-
-nav {
-  display: flex;
-  width: 90%;
-}
-
-ul li a {
-  margin-left: 1.5em;
-}
-
-a.logo {
-  margin-right: auto;
-}
-
-ul {
-  display: flex;
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-  align-items: center;
-}
-
-a {
-  text-decoration: none;
-  color: #ffffff;
-  position: relative;
-  font-size: 1.25em;
-  cursor: pointer;
-}
-
-a::after {
-  content: "";
-  top: 80%;
-
-  transition: all 0.35s;
-  position: absolute;
-}
-
-a:hover::after {
-  transition: all 0.35s;
-}
-
-a::after {
-  right: 50%;
-  left: 50%;
-}
-
-a:hover::after {
-  right: 0;
-  left: 0;
-}
-
-@media (max-width: 1024px) {
-  .wrapper {
-    height: auto;
-  }
-
-  nav {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  a.logo {
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
-    margin-right: 0px;
-  }
-
-  ul {
-    width: 100%;
-    margin-bottom: 1em;
-    justify-content: space-between;
-  }
-
-  ul li a {
-    margin-left: 0px;
-  }
-}
-
-@media (max-width: 768px) {
-  a.logo {
-    margin: 1.5em;
-  }
-
-  ul {
-    flex-direction: column;
-  }
-
-  ul li {
-    margin: 0.3em;
-    text-align: center;
-  }
-
-  ul li a {
-    margin-left: 0px;
-  }
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100% !important;
-}
-
-.mat-icon {
-  vertical-align: middle;
-}
-.bg-image {
-  /* The image used */
-  background-image: url("../../assets/cup-cafe-management.jpg");
-
-  /* Add the blur effect */
-  filter: blur(3px);
-  -webkit-filter: blur(3px);
-
-  /* Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
+  background-image: url(../../assets/cup-cafe-management.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
+mat-toolbar {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.name-content {
+  align-items: center;
+  display: flex;
+  > span {
+    margin: 5px;
+  }
+}
+.btn-content {
+  > button {
+    margin: 5px;
+  }
+}
 
-/* Position text in the middle of the page/image */
-.bg-text {
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.8); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  // z-index: 2;
-  width: 55%;
-  padding: 20px;
+.lg-content {
+  width: 400px;
+  margin: auto;
+  top: 10%;
+}
+
+mat-dialog-actions {
+  > button {
+    margin-bottom: 15px;
+  }
+}
+
+.title-center {
+  flex: 1 1 auto;
   text-align: center;
+}
+mat-form-field {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+@media screen and (min-width: 360px) and (max-width: 728px) {
+  .toolbar-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: auto;
+  }
+  .btn-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+  .lg-content {
+    width: 300px;
+    top: 15%;
+  }
 }
