update: profile img

--- a/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/src/app/layouts/full/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidenav-img">
   <img
-    src="assets/cafe-managament.jpg"
+    src="assets/profile.jpg"
     [width]="profilePicSiza()"
     [height]="profilePicSiza()"
   />
