feat: add improviment styles

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -8,10 +8,11 @@
   <mat-dialog-content class="mat-dialog__container">
     <form [formGroup]="forgotPasswordForm">
       <div>
-        <mat-form-field>
-          <mat-label>E-mail</mat-label>
-          <input matInput formControlName="email" required />
-          <mat-error
+        <mat-label>E-mail</mat-label>
+        <mat-form-field appearance="outline">
+        <input matInput formControlName="email" required  placeholder="Insira seu email de cadastro"/>
+        <mat-icon matSuffix>email</mat-icon>
+        <mat-error
             *ngIf="
               forgotPasswordForm.controls.email.touched &&
               forgotPasswordForm.controls.email.invalid
